--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
         </header>
         <h1>イギリス旅行記</h1>
         <h2>イギリスに行った時のことを綴ります。初めての一人旅行は色々大変でした。</h2>
-        
         <div class="box-wrap">
         <div class="box1">
+        <div class="title1">
             <h3>トラブル続き</h3>
+        </div>
             <p>成田空港に到着したら大雨でした。機内に座ってしばらく何も連絡がありませんでした。１時間後ようやく離陸し空の旅へ。</p>
         </div>
         <div class="box2">
-            <h3>ルールの違い</h3>
+            <div class="title2">
+                <h3>ルールの違い</h3>
+            </div>
         <p>それは、道路です。歩行者信号が青になったので横断歩道を渡ろうとしたのですが、すぐに点滅し、赤に変わりました。青信号は３秒間だけです。</p>
         </div>
         
         <div class="box3">
+            <div class="title3">
             <h3>ホステル生活</h3>
+            </div>
         <p>イギリスは何もかもが高いので、宿泊はユースホステル、またはホステルでした。</p>
         </div>
         </div>
